# IAMDT_TEST

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
iamdt_django/config/: urls.py
iamdt_django/config/settings/: __init__.py  local.py
iamdt_django/iamdt/: admin.py  apps.py  models.py  tests.py  views.py
iamdt_django/iamdt/fixtures/: customer.json  medical_detail.json  medical_register.json  medical_service.json  medical_staff.json  patient.json  register.json  user.json
iamdt_django/iamdt/migrations/: 0001_initial.py  0002_medicalstaff_medicaldetail_staff_medicalstaff_detail_and_more.py  0002_patient.py  0002_register.py  0003_medicaldetail.py
iamdt_django/iamdt/models/: __init__.py  choices.py  customer.py  iamdt_user.py  medical_detail.py  medical_register.py  medical_service.py  medical_staff.py  patient.py  register.py  user.py
iamdt_django/iamdt/tests/: __init__.py  customer_test.py  medical_detail_test.py  medical_register_test.py  medical_service_test.py  medical_staff_test.py  patient_test.py  register_test.py  user_test.py  uset_test.py
iamdt_django/iamdt_api/: apps.py  filter_set.py  pagination.py  permissions.py  urls.py
iamdt_django/iamdt_api/scheme/: __init__.py  auth.py  customer.py  medical_service.py  patient.py  staff.py
iamdt_django/iamdt_api/serializers/: __init__.py  auth.py  customer.py  login.py  medical_detail.py  medical_register.py  medical_service.py  staff.py  (+1 more)
iamdt_django/iamdt_util/: notification.py  validators.py
iamdt_django/logs/: notification.history
iamdt_django/templates/: index.html
(+28 files in other folders)
