[tool.poetry]
name = "iamdt_test"
version = "0.1.0"
description = ""
authors = ["jeongyeob <sjy20000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
django-filter = "^22.1"
django-silk = "^5.0.1"
drf-spectacular = "^0.22.1"

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.5"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
